# humanizator_3

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  dev.sh  docker-compose.monitoring.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml
.beads/: metadata.json
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: alembic.ini
backend/adapters/llm/: __init__.py  base.py  hf_precision_provider.py  openai_provider.py  openrouter_provider.py
backend/alembic/: env.py
backend/alembic/versions/: a4a055acb0de_init.py  acf845ceed0f_add_missing_tables.py  d4b82f0c61a9_add_precision_rewrite_mode.py  e4f9a2b8c1d3_add_is_admin_to_users.py  f1c3e8b9d2a7_add_best_of_n_rewrite_mode.py
backend/api/: health.py  main.py  metrics.py  rate_limiter.py
backend/api/routers/: admin.py  auth.py  evaluation.py  hitl.py  libraries.py  (+3 more)
backend/async_tasks/: celery_app.py  library_tasks.py  rewrite_tasks.py
backend/constraints/: rewrite_constraints.py
backend/domain/: enums.py
backend/infrastructure/: config.py  llm_cost_tracker.py  logging.py
backend/rewrite/: guided_rewrite.py  multilingual_chain.py  prompts.py
backend/tests/: conftest.py
docker/: Dockerfile
docs/: architecture.md  gpt_humanizator_project_total.md  how_2_create_kimi_research.md  kimi_3_arxiv_com_research.md  kimi_research.md  scientific_modules.md  tx_claude.md  tz.md  Краса і сила слова_ Бесіди про мову художнього твору -- Бацій І_С_ -- f914e5bad2c3b32110fb6893be5cb83a -- Anna’s Archive.txt
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  providers.tsx
frontend/lib/: api.ts  utils.ts
frontend/store/: auth.ts
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: db-backup.sh  db-reset.sh  db-restore.sh  db-seed.sh  deploy.sh  start-backend.sh  start-frontend.sh  start-worker.sh
(+63 files in other folders)
