[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humanizator"
version = "0.1.0"
description = "Модульная система авторского переписывания текста с опорой на референсный стиль"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "openai>=1.0.0",
    "spacy>=3.7.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "bert-score>=0.3.13",
    "language-tool-python>=2.8.0",
    "captum>=0.7.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "nltk>=3.8.0",
    "accelerate>=0.30.0",
    "tiktoken>=0.7.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["backend"]
